[package]
name = "pallet-block-reward"
version = "0.1.0"
authors = ["Stake  Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/PlasmNetwork/Astar"
description = "FRAME pallet for manage block rewards"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
]
