[package]
name = "pallet-custom-signatures"
version = "4.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet for user defined extrinsic signatures"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }
sp-io = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-core = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-support = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10" }
libsecp256k1 = "0.6.0"
hex-literal = "0.2.1"
sp-keyring = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10" }
sp-core = { git = "https://github.com/PlasmNetwork/substrate", branch = "polkadot-v0.9.10" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
]
