[package]
name = "pallet-contract-operator"
version = "1.3.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to manage operator developing smart contracts"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }

sp-core = { version = "2.0.0-rc4", default_features = false }
sp-runtime = { version = "2.0.0-rc4", default_features = false }
sp-io = { version = "2.0.0-rc4", default_features = false }
sp-std = { version = "2.0.0-rc4", default_features = false }
pallet-balances = { version = "2.0.0-rc4", default_features = false }
frame-support = { version = "2.0.0-rc4", default_features = false }
pallet-timestamp = { version = "2.0.0-rc4", default_features = false }
frame-system = { version = "2.0.0-rc4", default_features = false }
pallet-contracts = { version = "2.0.0-rc4", default_features = false }

[dev-dependencies]
wabt = "0.10.0"
derive_more = "0.14.0"
hex-literal = "0.2.1"
pallet-randomness-collective-flip = "2.0.0-rc4"
pallet-transaction-payment = "2.0.0-rc4"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-balances/std",
    "frame-support/std",
    "pallet-timestamp/std",
    "frame-system/std",
    "pallet-contracts/std",
]
