[package]
name = "pallet-contract-operator"
version = "1.4.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to manage operator developing smart contracts"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default_features = false }
pallet-contracts = { package = "cumulus-pallet-contracts", git = "https://github.com/paritytech/cumulus", default_features = false }

[dev-dependencies]
wabt = "0.10.0"
derive_more = "0.14.0"
hex-literal = "0.2.1"
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-balances/std",
    "frame-support/std",
    "pallet-timestamp/std",
    "frame-system/std",
    "pallet-contracts/std",
]
