[package]
name = "pallet-ovm"
version = "1.2.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.2.0", features = ['derive'], default-features = false }
sp-runtime = { version = "2.0.0-rc4", default_features = false }
sp-arithmetic = { version = "2.0.0-rc4", default_features = false }
sp-io = { version = "2.0.0-rc4", default_features = false }
sp-std = { version = "2.0.0-rc4", default_features = false }
frame-support = { version = "2.0.0-rc4", default_features = false }
frame-system = { version = "2.0.0-rc4", default_features = false }

[dev-dependencies]
hex-literal = "0.2.1"
sp-core = { version = "2.0.0-rc4" }
pallet-balances = { version = "2.0.0-rc4" }

[features]
default = ["std"]
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-std/std',
    'frame-support/std',
    'frame-system/std',
]
