[package]
name = "pallet-ovm"
version = "1.4.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to optimstic virtual machine"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.2.0", features = ['derive'], default-features = false }
ovmi = { path = "../../ovmi/lib", version = "0.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
lazy_static = { version = "1.4" }

[features]
default = ["std"]
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-std/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'ovmi/std',
]
