[package]
name = "pallet-ovm"
version = "1.5.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to optimstic virtual machine"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.2.0", features = ['derive'], default-features = false }
ovmi = { path = "../../ovmi/lib", version = "0.1.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
sp-io = { version = "2.0.0" }
pallet-balances = { version = "2.0.0" }
lazy_static = { version = "1.4" }

[features]
default = ["std"]
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-std/std',
    'sp-core/std',
    'frame-support/std',
    'frame-system/std',
    'ovmi/std',
]
