[package]
name = "pallet-plasm-lockdrop"
version = "1.3.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to real-time ETH and BTC lockdrop"

[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false }
median = { version = "0.3", default-features = false }
generic-array = { version = "0.11", default-features = false }
hex = { version = "0.4", default-features = false }
bs58 = { version = "0.3.0", default-features = false, features = ["alloc"] }
sp-io = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
sp-arithmetic = { version = "2.0.0-rc4", default-features = false }
frame-system = { version = "2.0.0-rc4", default-features = false }
frame-support = { version = "2.0.0-rc4", default-features = false }
pallet-session = { version = "2.0.0-rc4", default-features = false }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
pallet-balances = { version = "2.0.0-rc4" }
sp-staking = { version = "2.0.0-rc4" }
sp-keyring = { version = "2.0.0-rc4" }
plasm-primitives = { path = "../../bin/node/primitives" }

[features]
default = ["std","pallet-session/historical"]
std = [
    "serde",
    "hex/std",
    "codec/std",
    "num-traits/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-session/std",
    "pallet-timestamp/std",
]
