[package]
name = "pallet-plasm-lockdrop"
version = "1.4.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.plasmnet.io/"
repository = "https://github.com/staketechnologies/Plasm/"
description = "FRAME pallet to real-time ETH and BTC lockdrop"

[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false }
median = { version = "0.3", default-features = false }
generic-array = { version = "0.11", default-features = false }
hex = { version = "0.4", default-features = false }
bs58 = { version = "0.3.0", default-features = false, features = ["alloc"] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
plasm-primitives = { path = "../../bin/node/primitives" }

[features]
default = ["std","pallet-session/historical"]
std = [
    "serde",
    "hex/std",
    "codec/std",
    "num-traits/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-session/std",
    "pallet-timestamp/std",
]
